# cylinders_localization

./: CMakeLists.txt  README.md  bim_vector_map.txt  bim_vector_map_origin.txt  cylinders_localization.kdev4  initial_pose.txt  mTc.txt  mTc_test_bag.txt  package.xml  parameters.txt
config/: rviz_config.rviz
data/: new_truss328.pcd  test_truss328.pcd  truss328_200701.pcd
include/: line.hpp  parameter_reader.h
launch/: cylinders_localization.launch
src/: 200615cylinders_localization.cpp  cylinders_localization.cpp
